--- a/public/translations/uk/common.json
+++ b/public/translations/uk/common.json
@@ -17,5 +17,6 @@
   "Example": "Приклад",
   "BotSentMessage": "Бот надіслав вам в приватне повідомлення Telegram OTP для підтвердження входу в панель",
   "BotWarn": "Якщо ви не отримали сповіщення, спробуйте оновити сторінку та повторити спробу",
-  "CheckOTP": "Перевірити OTP"
+  "CheckOTP": "Перевірити OTP",
+  "Chickenbreast": "Чікенбрест"
 }
